--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     <div class="content__icon padding">
       <img src="./src/assets/images/icon-list.svg" alt="Icon List"><p>And much more!</p>
     </div>
+    <form action="" class="padding">
     <label for="input_email" class="padding">
       <h6 class="text_email ">Email address</h6>
-      <input type="email" name="input_email" id="input_email" placeholder="email@company.com"> 
+      <input type="email" name="input_email" id="input_email" placeholder="email@company.com" required> 
     </label>
-    <button type="submit" class="button">Subscribe to monthly newsletter</button>
+    <button type="submit" value="submit" class="button">Subscribe to monthly newsletter</button>
+  </form>
   </section>
 
   
