--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
   </form>
   </section>
 
+  <section class="agradecimiento padding">
+    <div class="agradecimiento__container">
+        <img class="agradecimiento__icon" src="./src/assets/images/icon-list.svg" alt="Icon List">
+        <h2>Thanks for subscribing!</h2>
+        <p>A confirmation email has been sent to <span>ash@loremcompany.com.</span>Please open it and click the button inside to confirm your subscription.</p>
+      </div>
+    <div class="agradecimiento__button">
+      <button type="submit" value="submit" class="button">Dismiss message</button>
+    </div>    
+  </section>
   
 
 
@@ -50,12 +60,11 @@
 
   <!-- Success message start 
 
-  Thanks for subscribing!
+  
 
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
+  
 
-  Dismiss message-->  
+  -->  
 
 </body>
 </html>
